# credere_sdk

./: .gitignore  LICENSE.md  README.md  pyproject.toml
.github/workflows/: lint.yml
src/credere/: __init__.py  _response.py  auth.py  client.py  exceptions.py
src/credere/models/: __init__.py  bank_credentials.py  customers.py  leads.py  plus_returns.py  proposal_attempts.py  proposals.py  simulations.py  stock.py  stores.py  users.py  utilities.py  vehicle_models.py
src/credere/resources/: __init__.py  bank_credentials.py  customers.py  leads.py  plus_returns.py  proposal_attempts.py  proposals.py  simulations.py  stock.py  stores.py  users.py  utilities.py  vehicle_models.py
tests/: conftest.py  test_bank_credentials.py  test_client.py  test_customers.py  test_e2e.py  test_leads.py  test_plus_returns.py  test_proposal_attempts.py  test_proposals.py  test_simulations.py  test_stock.py  test_stores.py  test_users.py  test_utilities.py  test_vehicle_models.py
